--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -67,7 +67,7 @@
 
 	<div id = "navbar"><div id = "navcontent">
 
-		<a href = "">Home</a> <a href = "">Articles</a> <a href = "">Courses</a> <a href = "">About</a>
+		<a href = "home.html">Home</a> <a href = "articles.html">Articles</a> <a href = "courses.html">Courses</a> <a href = "about.html">About</a>
 
 	</div></div>
 
