Fix navbar hyperlinks to properly point to home, about etc.

--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -67,7 +67,7 @@
 
 	<div id = "navbar"><div id = "navcontent">
 
-		<a href = "index.html">Home</a> <a href = "articles.html">Articles</a> <a href = "courses.html">Courses</a> <a href = "about.html">About</a>
+		<a href = "/index.html">Home</a> <a href = "/articles.html">Articles</a> <a href = "/courses.html">Courses</a> <a href = "/about.html">About</a>
 
 	</div></div>
 
