Turned templating.py into a proper library for interacting with the jinja engine. Simplified some code in build.py, minimised use of globals, abstracted some code in run() out into functions. Tweaked some templates.

--- a/megaphysics/templates/courses.html
+++ b/megaphysics/templates/courses.html
@@ -3,7 +3,7 @@
 {% block content %}
 	TODO: turn these into links to course pages?
   <br><br>
-  {% for c in courses %}
-    <li>{{ c }}</li>
+  {% for course in courses %}
+    <li>{{ course }}</li>
   {% endfor %}
 {% endblock content %}
