--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -2,82 +2,57 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	{% block title %}
-		<title>MegaPhysics</title>
-	{% endblock title %}
 
-	<style type = "text/css">
+    <meta charset="utf-8">
 
-	body {
-		font-family: Verdana, sans-serif;
-		color: black;
-		background: white;
-		margin: 0;
-	}
+    {% block title %}
+            <title>MegaPhysics</title>
+    {% endblock title %}
 
-	#content {
-		width: 58em;
-		margin: 0 auto;
-		background: white;
-		height: 100%;
-	}
+    {% block head %}{% endblock head %}
 
-	#navbar {
-		width: 58em;
-		margin: 0 auto;
-		background: white;
-		padding-top: 3em;
-		padding-bottom: 2em;
-	}
-
-	#navcontent {
-		/*width: 15em;*/
-		margin-left: auto;
-		margin-right: auto;
-		font-size: 2.5em;
-	}
-
-	a:link,
-	a:visited {
-		color: #3D3D3D;
-		text-decoration: none;
-	}
-
-	a:hover {
-		color: #FF7777;
-	}
-
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-weight: normal;
-	}
-
-	</style>
-
-	{% block head %}{% endblock head %}
+    <!-- Megaphysics template -->
+    <link href="/assets/megaphysics.css" rel="stylesheet">
+    
+    <!-- Flatly bootswatch theme -->
+    <link href="/assets/flatly-bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
 
-	<div id = "navbar"><div id = "navcontent">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index.html">Megaphysics</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li {% if pagetitle == "index" %} class="active" {% endif %} ><a href="/index.html">Home</a></li>
+                    <li {% if pagetitle == "about" %} class="active" {% endif %} ><a href="/about.html">About</a></li>
+                    <li {% if pagetitle == "articles" %} class="active" {% endif %} ><a href="/articles.html">Articles</a></li>
+                    <li {% if pagetitle == "courses" %} class="active" {% endif %} ><a href="/courses.html">Courses</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
 
-		<a href = "/index.html">Home</a> <a href = "/articles.html">Articles</a> <a href = "/courses.html">Courses</a> <a href = "/about.html">About</a>
-
-	</div></div>
-
-	<div id = "content">
-		{% block content %}
-
-			Base template.
-
-		{% endblock content %}
-	</div>
+    <div class="container">
+        <div class="maincontent">
+            {% block content %}
+                Base template.
+            {% endblock content %}
+        </div>
+    </div><!-- /.container -->
 
 </body>
 </html>
