Add viewport and add jquery and bootstrap js

--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -4,6 +4,8 @@
 <head>
 
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block title %}
             <title>MegaPhysics</title>
@@ -16,9 +18,6 @@
     
     <!-- Flatly bootswatch theme -->
     <link href="/assets/flatly-bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -53,6 +52,11 @@
             {% endblock content %}
         </div>
     </div><!-- /.container -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 </html>
