--- a/assets/megaphysics.css
+++ b/assets/megaphysics.css
@@ -1,11 +1,13 @@
-body {
-  padding-top: 50px;
-}
-
 .maincontent {
-  padding: 40px 15px;
+   padding: 40px 15px
 }
 
 h1, h2, h3, h4, h5, h6 {
-  text-align: center;
+   text-align: center
+}
+
+img {
+   display: block;
+   margin-left: auto;
+   margin-right: auto
 }
