--- a/assets/megaphysics.css
+++ b/assets/megaphysics.css
@@ -1,9 +1,9 @@
 .maincontent {
-   padding: 40px 15px
+   padding: 0px 15px
 }
 
 h1, h2, h3, h4, h5, h6 {
-   text-align: center
+   text-align: left
 }
 
 img {
