--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -29,14 +29,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">Megaphysics</a>
+                <a class="navbar-brand" href="{{ROOT}}index.html">Megaphysics</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li {% if pagetitle == "index" %} class="active" {% endif %} ><a href="/index.html">Home</a></li>
-                    <li {% if pagetitle == "about" %} class="active" {% endif %} ><a href="/about.html">About</a></li>
-                    <li {% if pagetitle == "articles" %} class="active" {% endif %} ><a href="/articles.html">Articles</a></li>
-                    <li {% if pagetitle == "courses" %} class="active" {% endif %} ><a href="/courses.html">Courses</a></li>
+                    <li {% if pagetitle == "index" %} class="active" {% endif %} ><a href="{{ROOT}}index.html">Home</a></li>
+                    <li {% if pagetitle == "about" %} class="active" {% endif %} ><a href="{{ROOT}}about.html">About</a></li>
+                    <li {% if pagetitle == "articles" %} class="active" {% endif %} ><a href="{{ROOT}}articles.html">Articles</a></li>
+                    <li {% if pagetitle == "courses" %} class="active" {% endif %} ><a href="{{ROOT}}courses.html">Courses</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
