--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -14,7 +14,7 @@
     {% block head %}{% endblock head %}
 
     <!-- Minified and concatenated css -->
-    <link href="/assets/styles.min.css" rel="stylesheet">
+    <link href="{{ROOT}}assets/styles.min.css" rel="stylesheet">
     
 </head>
 
@@ -51,7 +51,7 @@
     </div><!-- /.container -->
 
     <!-- Include combined jQuery and bootstrap javascript -->
-    <script src="/assets/javascripts.min.js"></script>
+    <script src="{{ROOT}}assets/javascripts.min.js"></script>
 
 </body>
 </html>
