Minor whitespace cleanup in files in megaphysics package. Moved minify.py to megaphysics package. Simplified handling of asset building, and folded minification code into build.

--- a/megaphysics/templates/base_template.html
+++ b/megaphysics/templates/base_template.html
@@ -51,7 +51,7 @@
     </div><!-- /.container -->
 
     <!-- Include combined jQuery and bootstrap javascript -->
-    <script src="{{ROOT}}assets/javascripts.min.js"></script>
+    <script src="{{ROOT}}assets/scripts.min.js"></script>
 
 </body>
 </html>
