--- a/megaphysics/templates/home.html
+++ b/megaphysics/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base_template.html" %}
 
 {% block content %}
+	<h1>Megaphysics Home</h1>
 	This is the homepage. Some shiz introducing people to the site goes here.
 {% endblock content %}
