--- a/megaphysics/templates/about.html
+++ b/megaphysics/templates/about.html
@@ -1,5 +1,9 @@
 {% extends "base_template.html" %}
 
 {% block content %}
-	About the site.
+
+	<h1>About</h1>
+
+	The purpose of this site is to describe physics, in a manner that is as easy to understand as possible. It is split into two parts: a collection of articles on specific topics, and a selection of courses covering some of the key areas in physics. In addition to this, each article comes in three different versions: Layman, Enthusiast and Expert. This is to take account of the fact that different people reading the articles may have different levels of understanding of the concepts involved. These versions correspond to the complexity of the explanation given. The Layman level of complexity is pitched at those who are assumed to have virtually no prior knowledge of Physics. An average member of the public. The Enthusiast level of complexity is aimed at the standard high school student studying Physics, which in UK educational terms means somewhere around the GCSE level, possibly approaching A Level standard. The Expert level of complexity is targeted at those studying Physics at degree level.
+
 {% endblock content %}
