Minor tweak to course styles.

--- a/megaphysics/templates/courses.html
+++ b/megaphysics/templates/courses.html
@@ -5,7 +5,7 @@
 	<h1>Courses</h1>
 
 	{% for course in courses %}
-		<li>{{ course }}</li>
+		<h4>{{ course }}</h4>
 	{% endfor %}
 
 {% endblock content %}
