--- a/assets/site_assets/css/megaphysics.css
+++ b/assets/site_assets/css/megaphysics.css
@@ -11,3 +11,15 @@ img {
    margin-left: auto;
    margin-right: auto
 }
+
+table {
+    table-layout: fixed
+}
+
+td {
+    word-wrap: break-word
+}
+
+th {
+    word-wrap: break-word
+}
