Add type and chapter metadata fields. Courses page will have links to the first chapters of each course. Articles page will only show articles (not course chapters).

--- a/megaphysics/templates/courses.html
+++ b/megaphysics/templates/courses.html
@@ -5,7 +5,7 @@
 	<h1>Courses</h1>
 
 	{% for course in courses %}
-		<h4>{{ course }}</h4>
+		<h4><a href="{{ course['url'] }}">{{ course['title'] }}</a></h4>
 	{% endfor %}
 
 {% endblock content %}
